# koin

./: .env.example  AGENTS.md  GEMINI.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: README.md  env.py
backend/src/: main.py
backend/src/adapters/: mongo_adapter.py
backend/src/config/: settings.py
backend/src/controllers/: health.py
backend/src/database/: postgres.py
backend/src/logging/: config.py
backend/src/schemas/: health.py
backend/src/use_cases/: health_check.py
backend/src/workers/: main.py
backend/tests/: test_health.py
docs/: description.md  especificacao_tecnica_koin.md  koin_description.md  tech_specs.md
